--- a/app/scss/components/_mo-trener.scss
+++ b/app/scss/components/_mo-trener.scss
@@ -60,8 +60,8 @@
 			padding:6rem 4rem;
 			position: absolute;
 			//height:450px;
-			//top:15px;
-			top:0;
+			top:15px;
+			//top:0;
 			right:0;
 			width:calc(100% - 420px);
 		}
