--- a/app/scss/blocks/header/_b-hero-image.scss
+++ b/app/scss/blocks/header/_b-hero-image.scss
@@ -12,7 +12,7 @@
 
 	&-content{
 		position:absolute;
-		background-color:rgba(0,0,0,0.5);
+		//background-color:rgba(0,0,0,0.5);
 		height:70%;
 		margin: auto;
   		top: 15%; left: 5%; bottom: 0; right: 5%;
