--- a/app/scss/components/_mo-saradnja.scss
+++ b/app/scss/components/_mo-saradnja.scss
@@ -1,6 +1,6 @@
 $numerator:10vw;
 $numerator-mob:26vw;
-$numerator-s:5vw;
+$numerator-tablet:15vw;
 
 .mo-saradnja{
 	position: relative;
@@ -82,7 +82,7 @@ $numerator-s:5vw;
 	}
 
 	.saradnja-text{
-		@include fontSize(22,14,14);
+		@include fontSize(24,14,16);
 		color:$paragraph;
 		margin:0 auto;
 		margin-bottom: 2rem;
@@ -90,7 +90,7 @@ $numerator-s:5vw;
 		
 		@include breakpoint(desktop){
 			line-height:calculateRem(20);
-			width:75%;
+			width:77%;
 			margin-bottom: 2rem;
 		}
 	}
@@ -117,6 +117,14 @@ $numerator-s:5vw;
 		height:$numerator-mob;
 		left:calc(50% - 13vw);
 		
+		@include breakpoint(tablet){
+			width:$numerator-tablet;
+			height:$numerator-tablet;
+			bottom:-7.5vw;
+			left:calc(50% - 7.5vw);
+			
+		}
+		
 		@include breakpoint(desktop){
 			width:$numerator;
 			height:$numerator;
@@ -141,13 +149,17 @@ $numerator-s:5vw;
 		}
 
 		p{
-			@include fontSize(92,22,92);
+			@include fontSize(92,60,92);
 			font-weight:700;
-			line-height:26vw;
+			line-height:$numerator-mob;
+
+			@include breakpoint(tablet){
+				line-height: $numerator-tablet;
+			}
 
 			@include breakpoint(desktop){
-			font-weight:700;
-			line-height:10vw;
+			
+			line-height:$numerator;
 			}
 		}
 	}
