--- a/app/scss/components/c-inline-numerator.scss
+++ b/app/scss/components/c-inline-numerator.scss
@@ -1,4 +1,5 @@
 $numerator-radius:2vw;
+$numerator-radius-tbl:6vw;
 $numerator-radius-mob:12vw;
 
 .c-inline-numerator{
@@ -41,6 +42,12 @@ $numerator-radius-mob:12vw;
 		line-height: $numerator-radius-mob;
 		@include fontSize(48,20,20);
 		margin-right:2rem;
+
+		@include breakpoint(tablet){
+			width:$numerator-radius-tbl;
+			height:$numerator-radius-tbl;
+			line-height: $numerator-radius-tbl;
+		}
 		
 		
 		@include breakpoint(desktop){
