--- a/app/scss/pages/_cenovnik.scss
+++ b/app/scss/pages/_cenovnik.scss
@@ -11,8 +11,8 @@
 	.col-01{
 		
 		@include breakpoint(desktop){
-			width: 53.7%;
-			padding-right:8%;
+			width: 46%;
+			margin-right:8%;
 			float:left;
 
 		}
@@ -21,7 +21,7 @@
 	.col-02{
 		
 		@include breakpoint(desktop){
-			width: 46.3%;
+			width: 46%;
 			float:left;
 		}
 	}
