--- a/app/scss/pages/saradnja/_start.scss
+++ b/app/scss/pages/saradnja/_start.scss
@@ -2,15 +2,19 @@
 
 	.section-title{
 		text-align: center;
-		padding:5rem 0;
+		padding-top:5rem;
+		padding-bottom:5.4rem;
 		background-color: $red;
 		color:$white;
-		@include fontSize(49.5,20,49.5);
+
+		@include fontSize(49.5,38,49.5);
 		font-family:'Playfair Display', serif;
 
 		@include breakpoint(desktop){
-			padding:3.5rem 0;
+			padding-top:3.5rem;
+			padding-bottom:3.9rem;
 			letter-spacing: 0.05em;
+			
 		}
 
 		span{
