--- a/app/css/master-css.css
+++ b/app/css/master-css.css
@@ -355,86 +355,32 @@ body {
         .nav .logo img {
           max-width: 100%; } }
   .nav .navigacija {
-    display: none; }
+    display: block;
+    position: fixed;
+    z-index: 1;
+    top: 9rem;
+    left: 30%;
+    right: 0;
+    background-color: black;
+    color: white;
+    padding-left: 4rem;
+    transition: all 0.5s ease;
+    transform: translateX(100%); }
     @media screen and (min-width: 1024px) {
       .nav .navigacija {
-        display: block; } }
-  .nav .links.links--nav {
-    list-style-type: none;
-    display: block;
-    padding-top: 2rem;
-    margin-bottom: 2rem; }
-    @media screen and (min-width: 1024px) {
-      .nav .links.links--nav {
-        margin-left: 9.5rem;
-        padding-top: 0rem;
-        margin-bottom: 0rem;
-        float: left; } }
-    @media screen and (min-width: 1024px) {
-      .nav .links.links--nav li {
-        display: inline-block; } }
-    .nav .links.links--nav .link {
-      font-family: 'Roboto Slab', serif;
-      letter-spacing: 0.02em;
-      transition: all 0.3s ease;
-      margin-right: 0rem;
-      display: block;
-      margin-bottom: 4rem;
-      font-weight: 700; }
-      @media screen and (max-width: 767px) {
-        .nav .links.links--nav .link {
-          font-size: 3.2rem; } }
-      @media screen and (min-width: 768px) {
-        .nav .links.links--nav .link {
-          font-size: 2.2rem; } }
-      @media screen and (min-width: 1024px) {
-        .nav .links.links--nav .link {
-          font-size: 1.4rem; } }
-      @media screen and (min-width: 1024px) {
-        .nav .links.links--nav .link {
-          line-height: 5rem;
-          margin-right: 3.1rem;
-          margin-bottom: 0rem; } }
-      .nav .links.links--nav .link--last {
-        margin-bottom: 4rem; }
-        @media screen and (min-width: 1024px) {
-          .nav .links.links--nav .link--last {
-            margin-right: 0rem; } }
-      .nav .links.links--nav .link--active {
-        color: #ed1e4c; }
-      .nav .links.links--nav .link:hover {
-        color: #ed1e4c; }
-  .nav .links.links--social {
-    display: block;
-    margin-bottom: 2rem; }
-    @media screen and (max-width: 767px) {
-      .nav .links.links--social {
-        font-size: 3.6rem; } }
-    @media screen and (min-width: 768px) {
-      .nav .links.links--social {
-        font-size: 2.2rem; } }
-    @media screen and (min-width: 1024px) {
-      .nav .links.links--social {
-        font-size: 2.2rem; } }
-    @media screen and (min-width: 1024px) {
-      .nav .links.links--social {
-        line-height: 5rem;
-        float: right;
-        margin-bottom: 0; } }
-    .nav .links.links--social i {
-      transition: all 0.3s ease;
-      cursor: pointer;
-      margin-right: 3.5rem; }
-      @media screen and (min-width: 1024px) {
-        .nav .links.links--social i {
-          margin-left: 2rem;
-          margin-right: 0; } }
-      .nav .links.links--social i:hover {
-        color: #ed1e4c; }
+        display: block;
+        position: static;
+        padding: 0;
+        transform: translateX(0);
+        background-color: transparent; } }
+    .nav .navigacija.drop-down-active {
+      transform: translateY(0);
+      opacity: 1; }
   .nav .burger {
     position: absolute;
     right: 2rem;
-    top: 3rem; }
+    top: 3rem;
+    transition: all 0.3s ease; }
     @media screen and (max-width: 767px) {
       .nav .burger {
         font-size: 5rem; } }
@@ -447,6 +393,79 @@ body {
     @media screen and (min-width: 1024px) {
       .nav .burger {
         display: none; } }
+
+.links.links--nav {
+  list-style-type: none;
+  display: block;
+  padding-top: 2rem;
+  margin-bottom: 2rem; }
+  @media screen and (min-width: 1024px) {
+    .links.links--nav {
+      margin-left: 9.5rem;
+      padding-top: 0rem;
+      margin-bottom: 0rem;
+      float: left; } }
+  @media screen and (min-width: 1024px) {
+    .links.links--nav li {
+      display: inline-block; } }
+  .links.links--nav .link {
+    font-family: 'Roboto Slab', serif;
+    letter-spacing: 0.02em;
+    transition: all 0.3s ease;
+    margin-right: 0rem;
+    display: block;
+    font-weight: 700;
+    padding: 3rem 0; }
+    @media screen and (max-width: 767px) {
+      .links.links--nav .link {
+        font-size: 3.2rem; } }
+    @media screen and (min-width: 768px) {
+      .links.links--nav .link {
+        font-size: 2.2rem; } }
+    @media screen and (min-width: 1024px) {
+      .links.links--nav .link {
+        font-size: 1.4rem; } }
+    @media screen and (min-width: 1024px) {
+      .links.links--nav .link {
+        line-height: 5rem;
+        margin-right: 3.1rem;
+        margin-bottom: 0rem;
+        padding: 0; } }
+    @media screen and (min-width: 1024px) {
+      .links.links--nav .link--last {
+        margin-right: 0rem; } }
+    .links.links--nav .link--active {
+      color: #ed1e4c; }
+    .links.links--nav .link:hover {
+      color: #ed1e4c; }
+
+.links.links--social {
+  display: block;
+  margin-bottom: 4rem; }
+  @media screen and (max-width: 767px) {
+    .links.links--social {
+      font-size: 3.6rem; } }
+  @media screen and (min-width: 768px) {
+    .links.links--social {
+      font-size: 2.2rem; } }
+  @media screen and (min-width: 1024px) {
+    .links.links--social {
+      font-size: 2.2rem; } }
+  @media screen and (min-width: 1024px) {
+    .links.links--social {
+      line-height: 5rem;
+      float: right;
+      margin-bottom: 0; } }
+  .links.links--social i {
+    transition: all 0.3s ease;
+    cursor: pointer;
+    padding-right: 3.5rem; }
+    @media screen and (min-width: 1024px) {
+      .links.links--social i {
+        margin-left: 2rem;
+        padding-right: 0; } }
+    .links.links--social i:hover {
+      color: #ed1e4c; }
 
 .hero {
   position: relative; }
