--- a/app/scss/components/_c-labels.scss
+++ b/app/scss/components/_c-labels.scss
@@ -28,7 +28,7 @@
 
 		@include breakpoint(desktop){
 			padding-bottom: 2rem;
-			margin-top: 12rem;
+			margin-top: 2rem;
 		}
 	}
 
@@ -46,19 +46,21 @@
 	}
 
 	&--full-border{
-		@include fontSize(28,26,23);
+		@include fontSize(28,23,23);
 		font-family: 'Playfair Display', serif;
 		font-weight:700;
 		letter-spacing: 0.15em;
 		color:$red;
 		display: inline-block;
 		border: 2px solid $red;
-		padding:1rem 2.5rem;
+		padding:0 2.5rem;
 		margin-bottom: 3rem;
+		line-height: 3.5rem;
 
 		@include breakpoint(desktop){
-			padding:1rem 3rem;
+			padding:0 3rem;
 			margin-bottom: 2rem;
+			line-height: 4rem;
 		}
 	}
 
@@ -91,13 +93,15 @@
 		color:$gray;
 		display: inline-block;
 		border: 6px solid $red;
-		padding:1.5rem 2.5rem;
+		padding:0 2.5rem;
 		margin-top: 6.5rem;
+		line-height: 6.5rem;
 
 		@include breakpoint(desktop){
-			padding:1.5rem 3.5rem;
+			padding:0 3.5rem;
 			margin-top: 4rem;
 			border: 8px solid $red;
+
 		}
 	}
 }
