--- a/app/scss/pages/_kontakt.scss
+++ b/app/scss/pages/_kontakt.scss
@@ -52,10 +52,17 @@
 			}
 
 			p{
-				line-height: 2rem;
+				line-height: 3.5rem;
+				@include fontSize(28,14,20);
+				@include breakpoint(desktop){
+					line-height: 2.7rem;
+				}
 			}
 			.radno-vreme{
-				width: 55%;
+				width: 100%;
+				@include breakpoint(desktop){
+					width: 75%;
+				}
 				span{
 					float:right;
 				}
@@ -65,6 +72,10 @@
 		img{
 			align-self: flex-start;
 			margin-right: 3rem;
+			width:15%;
+			@include breakpoint(desktop){
+				width:40%;
+			}
 		}
 	}
 
