--- a/app/scss/pages/_kontakt.scss
+++ b/app/scss/pages/_kontakt.scss
@@ -7,7 +7,7 @@
 	@include breakpoint(desktop){
 		line-height: calculateRem(17);
 	}
-	
+
 	.kontakt-info{
 		padding-left:6rem;
 		border-left: 3px solid $red;
@@ -36,7 +36,7 @@
 
 	.kontakt-description{
 		@include fontSize(16,16,16);
-		
+
 		display: flex;
 		flex-flow: row nowrap;
  		align-items: center;
@@ -46,7 +46,7 @@
 
 		.body{
 			color: white;
-			
+
 			@include breakpoint(desktop){
 
 			}
@@ -74,7 +74,7 @@
 			margin-right: 3rem;
 			width:15%;
 			@include breakpoint(desktop){
-				width:40%;
+				// width:15%;
 			}
 		}
 	}
@@ -88,7 +88,7 @@
 
 	.col-01{
 		margin-bottom: 8rem;
-		
+
 		@include breakpoint(desktop){
 			margin: 0;
 		}
