--- a/app/scss/blocks/header/_b-hero-image.scss
+++ b/app/scss/blocks/header/_b-hero-image.scss
@@ -3,7 +3,7 @@
 	position:relative;
 
 	@include breakpoint(desktop){
-		
+
 	}
 
 	img{
@@ -15,11 +15,11 @@
 		background-color:transparent;
 		height:70%;
 		margin: auto;
-  		top: 5%; left: 5%; bottom: 0; right: 5%;
+  		top: 0; left: 5%; bottom: 0; right: 5%;
   		text-align: center;
   		padding:0 3rem;
   		padding-top:3rem;
-  		
+
   		@include breakpoint(desktop){
 			top: 5%; left: 0; bottom: 0; right: 0;
 			padding-top:7rem;
@@ -38,7 +38,7 @@
 		font-weight: 700;
 		letter-spacing: 0.01em;
 		margin-top:2.4rem;
-		
+
 		@include breakpoint(desktop){
 			margin-top:2.4rem;
 		}
@@ -72,20 +72,20 @@
 			@include breakpoint(desktop){
 				line-height:calculateRem(29);
 				margin-top:1.5rem;
-			}	
+			}
 		}
 	}
 
 	&-subtitle{
-		@include fontSize(16,16,20);
+		@include fontSize(16,16,25);
 		color:$red;
 		font-weight:700;
 		letter-spacing:-0.01em;
 		margin-top:2.5rem;
-		
+
 		@include breakpoint(desktop){
-			line-height:calculateRem(19);
+			line-height:calculateRem(25);
 			margin-top:2.2rem;
-		}	
+		}
 	}
 }
