text within labels cenet vertical

--- a/app/css/master-css.css
+++ b/app/css/master-css.css
@@ -576,8 +576,9 @@ body {
   color: #ffffff;
   border: 3px solid #ffffff;
   display: inline-block;
-  padding: 1.2rem 1.2rem;
-  letter-spacing: 0.05em; }
+  padding: 0 1.2rem;
+  letter-spacing: 0.05em;
+  line-height: 4rem; }
   @media screen and (max-width: 767px) {
     .label--hero {
       font-size: 2.4rem; } }
@@ -587,10 +588,14 @@ body {
   @media screen and (min-width: 1024px) {
     .label--hero {
       font-size: 1.8rem; } }
+  @media screen and (min-width: 768px) {
+    .label--hero {
+      line-height: 5rem; } }
   @media screen and (min-width: 1024px) {
     .label--hero {
-      padding: 1.2rem 1.2rem;
-      letter-spacing: 0.05em; } }
+      padding: 0 1.2rem;
+      letter-spacing: 0.05em;
+      line-height: 2.2rem; } }
 
 .label--underline {
   font-family: 'Playfair Display', serif;
@@ -669,6 +674,7 @@ body {
   font-family: 'Playfair Display', serif;
   font-weight: 700;
   margin-bottom: 2.5rem;
+  line-height: 5.5rem;
   letter-spacing: 0.25em; }
   @media screen and (max-width: 767px) {
     .label--full-color {
@@ -684,7 +690,8 @@ body {
       margin: 0 auto;
       padding: 0 1.5rem;
       margin-bottom: 2.5rem;
-      width: 60%; } }
+      width: 60%;
+      line-height: 5rem; } }
 
 .label--bold {
   font-family: 'Playfair Display', serif;
