--- a/app/scss/components/_c-labels.scss
+++ b/app/scss/components/_c-labels.scss
@@ -5,13 +5,19 @@
 		color:$white;
 		border:3px solid $white;
 		display:inline-block;
-		padding:1.2rem 1.2rem;
+		padding:0 1.2rem;
 		letter-spacing: 0.05em;
+		line-height:4rem;
 
+
+		@include breakpoint(tablet){
+			line-height:5rem;
+		}
 
 		@include breakpoint(desktop){
-			padding:1.2rem 1.2rem;
+			padding:0 1.2rem;
 			letter-spacing: 0.05em;
+			line-height:2.2rem;
 		}
 	}
 
@@ -75,6 +81,7 @@
 		font-family: 'Playfair Display', serif;
 		font-weight:700;
 		margin-bottom: 2.5rem;
+		line-height: 5.5rem;
 		letter-spacing: 0.25em;
 
 		@include breakpoint(desktop){
@@ -82,6 +89,7 @@
 			padding:0 1.5rem;
 			margin-bottom: 2.5rem;
 			width:60%;
+			line-height: 5rem;
 		}
 	}
 
@@ -101,7 +109,6 @@
 			padding:0 3.5rem;
 			margin-top: 4rem;
 			border: 8px solid $red;
-
 		}
 	}
 }
